# crypto-cpp

./: .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  presubmit.sh
src/starkware/: CMakeLists.txt
src/starkware/algebra/: CMakeLists.txt  big_int.h  big_int.inl  big_int_test.cc  elliptic_curve.h  elliptic_curve.inl  elliptic_curve_test.cc  fraction_field_element.h  fraction_field_element.inl  fraction_field_element_test.cc  prime_field_element.cc  prime_field_element.h  prime_field_element_test.cc
src/starkware/crypto/: CMakeLists.txt  ecdsa.cc  ecdsa.h  ecdsa_test.cc  elliptic_curve_constants.cc  elliptic_curve_constants.h  elliptic_curve_constants_test.cc  pedersen_hash.cc  pedersen_hash.h  pedersen_hash_test.cc
src/starkware/crypto/ffi/: CMakeLists.txt  crypto_lib_test.go  ecdsa.cc  endian.h  pedersen_hash.cc  portable_endian.h  utils.cc  utils.h
src/starkware/crypto/ffi/crypto_lib/: crypto_lib.go
src/starkware/crypto/ffi/go/: crypto_lib.go  crypto_lib_test.go  go.mod
src/starkware/crypto/ffi/js/: CMakeLists.txt  crypto.js  package.json
src/starkware/crypto/ffi/js/test/: crypto_test.js  signature_test_data.json
src/starkware/starkex/: CMakeLists.txt  order.cc  order.h  order_test.cc
src/starkware/utils/: CMakeLists.txt  math.h  math_test.cc  prng_test.cc  test_utils.h
